@@ -74,3 +74,6 @@ v2.1:
 - added namespace parse
 - added classes: LexCharClasses, LexScreener, LexTone, LexScanner, Observer, Observable, ChangeNotifier, SmartObserver, RingBuffer
 - renamed class Buffer<T> to class DynamicBuffer<T>
+- namespace cmdl:
+  - renamed Aliases to Alias (ShortAlias resp.)
+  - added option-check for alias-definition
